--- a/plugins/front-cropper/assets/css/fc-style.css
+++ b/plugins/front-cropper/assets/css/fc-style.css
@@ -1,4 +1,30 @@
 /* cropper popup */
-#cropper-board .modal-content a {border-radius: 4px;color: #fff!important;margin-right: 10px;cursor:pointer}
-#cropper-board.nab-modal .modal-content-wrap {text-align: center;}
-.cropper-container, #cropper-image {max-width: 100%;margin: 0 0 15px;max-height: 550px;}
+#cropper-board .bm-btn-wrap a{border-radius:4px;color:#fff!important;margin-right:10px;cursor:pointer}
+.cropper-container, #cropper-image{max-width:100%;margin:0 0 15px;max-height:550px;}
+
+/* cropper */
+#cropper-board .cropper-bg{overflow:hidden;}
+.bm-show-cropping-area .bm-adjust-crop-actions{position:absolute;right:0;top:15px;z-index:2}
+.bm-show-cropping-area .bm-adjust-crop-actions a{width:35px;height:35px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;border:2px solid #ccc;color:#333!important;}
+
+/* responsive */
+@media (max-width:1024px){
+	.bm-show-cropping-area .bm-adjust-crop-actions{background-color:rgb(0 0 0 / 50%);padding:10px;right:auto;left:5px;}
+	.bm-show-cropping-area .bm-adjust-crop-actions a{color:#fff!important;}
+	#cropper-board .bm-btn-wrap{position:absolute;right:5px;top:15px;width:32px;}
+	#cropper-board .bm-btn-wrap a{font-size:0;margin:0 0 8px;padding:4px;width:32px;height:32px;line-height:32px;border-radius:30px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
+	#cropper-board .bm-btn-wrap a:before{content:"\f00c";display:inline-block;font-size:14px;font-family:fontawesome;}
+	#cropper-board .bm-btn-wrap a.bm-btn:before{content:"\f00d";}
+	#cropper-board .bm-btn-wrap a.bm-btn{background-color:red!important;border-color:red!important;}
+	#cropper-board a#cropper-button{background-color:#4BB543!important;border-color:#4BB543!important;line-height:22px;}
+	.bm-show-cropping-area .bm-btn, .bm-show-cropping-area .bm-btn-pink{min-width:auto}
+	.bm-show-cropping-area .bm-show-cropped-canvas{margin-bottom:0}
+}
+@media (max-width:600px){
+	.bm-show-cropping-area .bm-adjust-crop-actions{padding:8px;}
+	.bm-show-cropping-area .bm-adjust-crop-actions a{width:30px;height:30px;font-size:14px;}
+}
+@media (max-width:480px){
+	.bm-show-cropping-area .bm-adjust-crop-actions{padding:6px;}
+	.bm-show-cropping-area .bm-adjust-crop-actions a{width:27px;height:27px;font-size:12px;}
+}
